namespace_dev/app/deployment-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  labels:
    app: app
    tier: devops
spec:
  selector:
    matchLabels:
      app: app
  replicas: 3
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: app
          image: docker.io/library/devops_303_tp_15
          imagePullPolicy: Never
          ports:
            - containerPort: 8884
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 100m
              memory: 128Mi
