namespace_dev/app/service-app.yml
kind: Service
apiVersion: v1
metadata:
  name: app
spec:
  selector:
    app: app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8884
